--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -23,10 +23,11 @@ tauri-build = { version = "2", features = [] }
 
 
 
+
 tauri = { version = "2", features = [] }
 tauri-plugin-opener = "2"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 tauri-plugin-sql = { version = "2", features = ["sqlite"] }
 rusqlite = { version = "0.31.0", features = ["bundled"] }
-
+chrono = "0.4.41"
